[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://EngineControl.gd" type="Script" id=2]
[ext_resource path="res://UI/direction-arrow.png" type="Texture" id=3]
[ext_resource path="res://UI/progress-border.png" type="Texture" id=4]
[ext_resource path="res://UI/fuel-progress.png" type="Texture" id=5]
[ext_resource path="res://UI/empty-progress.png" type="Texture" id=6]
[ext_resource path="res://UI/Throttle.gd" type="Script" id=7]
[ext_resource path="res://UI/button-belly-flop.png" type="Texture" id=8]
[ext_resource path="res://UI/Fuel Gauge/fuel-empty.png" type="Texture" id=9]
[ext_resource path="res://UI/Fuel Gauge/main-tank-lox.png" type="Texture" id=10]
[ext_resource path="res://UI/Fuel Gauge/main-tank-methane.png" type="Texture" id=11]
[ext_resource path="res://UI/Fuel Gauge/header-tank-methane.png" type="Texture" id=12]
[ext_resource path="res://UI/Fuel Gauge/header-tank-lox.png" type="Texture" id=13]
[ext_resource path="res://UI/Engine Button/engine-off.png" type="Texture" id=14]
[ext_resource path="res://UI/Engine Button/engine-on.png" type="Texture" id=15]
[ext_resource path="res://UI/Engine Button/button-background.png" type="Texture" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BellyFlopButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1121.28, 433.84 )
normal = ExtResource( 8 )
pressed = ExtResource( 8 )
shape = SubResource( 1 )
passby_press = true
action = "belly_flop"

[node name="Throttle" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 92.0
margin_right = 8.0
margin_bottom = 92.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 0.172549, 0.8, 0.156863, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElevationLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 10.0
margin_right = 47.0
margin_bottom = 22.0
text = "Altitude: "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionArrow" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.969
anchor_right = 0.5
anchor_bottom = 0.969
margin_top = 0.319946
margin_bottom = 0.319946
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="DirectionArrow"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="FuelGauge" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -169.0
margin_right = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="FuelGauge"]
position = Vector2( 0, 10 )
texture = ExtResource( 9 )
centered = false

[node name="MainLox" type="TextureProgress" parent="FuelGauge"]
anchor_left = 0.5
anchor_top = 0.701
anchor_right = 0.5
anchor_bottom = 0.701
margin_left = -18.0
margin_top = -34.469
margin_right = 18.0
margin_bottom = 34.531
value = 100.0
texture_progress = ExtResource( 10 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMethane" type="TextureProgress" parent="FuelGauge"]
anchor_left = 0.5
anchor_top = 0.331
anchor_right = 0.5
anchor_bottom = 0.331
margin_left = -18.0
margin_top = -23.939
margin_right = 18.0
margin_bottom = 24.061
value = 100.0
texture_progress = ExtResource( 11 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderMethane" type="TextureProgress" parent="FuelGauge"]
anchor_left = 0.509
anchor_top = 0.482
anchor_right = 0.509
anchor_bottom = 0.482
margin_left = -13.522
margin_top = -13.458
margin_right = 13.478
margin_bottom = 13.542
value = 100.0
texture_progress = ExtResource( 12 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderLox" type="TextureProgress" parent="FuelGauge"]
anchor_left = 0.5
anchor_top = 0.178
anchor_right = 0.5
anchor_bottom = 0.178
margin_left = -12.0
margin_top = -13.082
margin_right = 12.0
margin_bottom = 12.918
value = 100.0
texture_progress = ExtResource( 13 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgradeControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -117.0
margin_right = 8.0
margin_bottom = -57.0
rect_scale = Vector2( 1.7597, 1.7746 )
rect_pivot_offset = Vector2( 8, 30.1483 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ProgradeControl"]
position = Vector2( 0, 22.1757 )
texture = ExtResource( 3 )
centered = false

[node name="EngineControl" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -201.0
margin_top = -235.0
margin_right = -34.0
margin_bottom = -34.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="EngineControl"]
position = Vector2( 83.5, 96.5 )
texture = ExtResource( 16 )

[node name="Buttons" type="Control" parent="EngineControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -63.0
margin_right = 70.0
margin_bottom = 63.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="EngineButton" type="TextureButton" parent="EngineControl/Buttons"]
margin_right = 71.014
margin_bottom = 70.0
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineButton2" type="TextureButton" parent="EngineControl/Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -70.0
margin_right = 35.0
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EngineButton3" type="TextureButton" parent="EngineControl/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.986
margin_bottom = 70.0
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Throttle" to="Throttle" method="_on_Throttle_gui_input"]
